--- a/index.html
+++ b/index.html
@@ -22,4 +22,16 @@ body {
 }
 </style>
 </head>
+  <body>
+
+<div class="topnav">
+  <a>Jonathan</a>
+</div>
+
+<div style="padding-left:16px">
+  <h2>Top Navigation Example</h2>
+  <p>Some content..</p>
+</div>
+
+</body>
 </html>
